--- a/lang/en.json
+++ b/lang/en.json
@@ -256,6 +256,65 @@
     "Average": "Average",
     "Starting": "Hit Points at 1st Level"
   },
+  "ItemChoice": {
+    "Choose": "choose {count}",
+    "Chosen": "Chosen: {current} of {max}",
+    "Details": "Choice Details",
+    "DropHint": "Drop Items here to add them to the list that can be chosen with this advancement.",
+    "FIELDS": {
+      "allowDrops": {
+        "hint": "Should players be able to drop their own choices into this advancement?",
+        "label": "Allow Drops"
+      },
+      "choices": {
+        "hint": "Specify how many choices are allowed at each level.",
+        "label": "Choices",
+        "FIELDS": {
+          "count": {
+            "label": "Count"
+          },
+          "replacement": {
+            "label": "Allow Replacement"
+          }
+        }
+      },
+      "pool": {
+        "label": "Item Options"
+      },
+      "restriction": {
+        "level": {
+          "Available": "Any Available Level",
+          "hint": "Only allow choices from spells of this level.",
+          "label": "Spell Level"
+        },
+        "subtype": {
+          "label": "Subtype"
+        },
+        "type": {
+          "label": "Type"
+        }
+      },
+      "type": {
+        "Any": "Anything",
+        "hint": "Restrict what Item types can be chosen.",
+        "label": "Item Type"
+      }
+    },
+    "Hint": "Present the player with a choice of items (such as equipment, features, or spells) that they can choose for their character at one or more levels.",
+    "Replacement": {
+      "None": "No Replacement",
+      "Title": "replace"
+    },
+    "Title": "Choose Items",
+    "Warning": {
+      "FeatureLevel": "Must be at least level {level} to take this feature.",
+      "InvalidType": "Only {type} items can be selected for this choice.",
+      "NoOriginal": "Previously selected choice no longer available for replacement.",
+      "PreviouslyChosen": "This item has already been chosen at a previous level.",
+      "SpellLevelAvailable": "Only {level} or lower spells can be chosen for this advancement.",
+      "SpellLevelSpecific": "Only {level} spells can be chosen for this advancement."
+    }
+  },
   "ItemGrant": {
     "Details": "Grant Details",
     "DropHint": "Drop Items here to add them to the list granted by this advancement.",
@@ -343,26 +402,6 @@
 "DND5E.AdvancementHitPointsMaxAtFirstLevel": "Max at 1st Level: <strong>{max}</strong>",
 "DND5E.AdvancementHitPointsRollMessage": "Roll {class} Hit Points",
 "DND5E.AdvancementHitPointsRollButton": "Roll {die}",
-"DND5E.AdvancementItemChoiceTitle": "Choose Items",
-"DND5E.AdvancementItemChoiceHint": "Present the player with a choice of items (such as equipment, features, or spells) that they can choose for their character at one or more levels.",
-"DND5E.AdvancementItemChoiceChoices": "Choices",
-"DND5E.AdvancementItemChoiceChoose": "choose {count}",
-"DND5E.AdvancementItemChoiceChosen": "Chosen: {current} of {max}",
-"DND5E.AdvancementItemChoiceFeatureLevelWarning": "Must be at least level {level} to take this feature.",
-"DND5E.AdvancementItemChoiceLevelsHint": "Specify how many choices are allowed at each level.",
-"DND5E.AdvancementItemChoiceNoOriginalError": "Previously selected choice no longer available for replacement.",
-"DND5E.AdvancementItemChoicePreviouslyChosenWarning": "This item has already been chosen at a previous level.",
-"DND5E.AdvancementItemChoiceReplacement": "Allow Replacement",
-"DND5E.AdvancementItemChoiceReplacementNone": "No Replacement",
-"DND5E.AdvancementItemChoiceReplacementTitle": "replace",
-"DND5E.AdvancementItemChoiceSpellLevelAvailable": "Any Available Level",
-"DND5E.AdvancementItemChoiceSpellLevelAvailableWarning": "Only {level} or lower spells can be chosen for this advancement.",
-"DND5E.AdvancementItemChoiceSpellLevelSpecificWarning": "Only {level} spells can be chosen for this advancement.",
-"DND5E.AdvancementItemChoiceSpellLevelHint": "Only allow choices from spells of this level.",
-"DND5E.AdvancementItemChoiceType": "Item Type",
-"DND5E.AdvancementItemChoiceTypeHint": "Restrict what Item types can be chosen.",
-"DND5E.AdvancementItemChoiceTypeAny": "Anything",
-"DND5E.AdvancementItemChoiceTypeWarning": "Only {type} items can be selected for this choice.",
 "DND5E.AdvancementItemTypeInvalidWarning": "{type} items cannot be added with this advancement type.",
 "DND5E.AdvancementLevelHeader": "Level {level}",
 "DND5E.AdvancementLevelAnyHeader": "Any Level",
