[#3958] Improve localization of rest messages
Updates the rest message to select the proper plural form of Hit
Points and Hit Dice to match the number recovered.

Also adjusts the flavor to automatically display the rest time in
the message flavor, rather than relying on hard-coded labels for
each rest variant. This ensures the flavor will properly display
the rest time even if it doesn't exactly match the default values.

In order to support this as well as improve other time-based
localization in the future, this PR adds two new utlity methods:
- `convertTime` converts a time from one set of units to another.
  It will also attempt to pick the best unit automatically if the
  `to` units are not defined, selecting the largest unit that can
  fully represent the value (with some wiggle room so it will
  display 90 minutes, rather than 1.5 hours).
- `formatTime` converts a time value and units into a string for
  display, relying on the system-provided plural localization if
  available and if not using Javascript's standard unit formatting
  for numbers.

--- a/lang/en.json
+++ b/lang/en.json
@@ -2118,6 +2118,14 @@
 "DND5E.HealingRoll": "Healing Roll",
 "DND5E.HealingTemp": "Healing (Temporary)",
 "DND5E.Height": "Height",
+
+"DND5E.HITPOINTS": {
+  "Counted": {
+    "one": "{number} hit point",
+    "other": "{number} hit points"
+  }
+},
+
 "DND5E.HitPoints": "Hit Points",
 "DND5E.HitPointsBonusLevel": "Per Level Bonus",
 "DND5E.HitPointsBonusOverall": "Overall Bonus",
@@ -2144,7 +2152,11 @@
     "Increase": "Increase"
   },
   "Available": "{number} available",
-  "Config": "Adjust Hit Dice"
+  "Config": "Adjust Hit Dice",
+  "Counted": {
+    "one": "{number} hit die",
+    "other": "{number} hit dice"
+  }
 },
 
 "DND5E.HitDie": "Hit Die",
@@ -2533,16 +2545,10 @@
     "LabelShort": "L. Rest",
     "Recovery": "Recovers after Long Rest",
     "Result": {
-      "Full": "{name} takes a long rest and recovers {health} Hit Points and {dice} Hit Dice.",
-      "HitDice": "{name} takes a long rest and recovers {dice} Hit Dice.",
-      "HitPoints": "{name} takes a long rest and recovers {health} Hit Points.",
+      "Full": "{name} takes a long rest and recovers {health} and {dice}.",
+      "HitDice": "{name} takes a long rest and recovers {dice}.",
+      "HitPoints": "{name} takes a long rest and recovers {health}.",
       "Short": "{name} takes a long rest."
-    },
-    "Type": {
-      "Epic": "Long Rest (1 hour)",
-      "Gritty": "Long Rest (7 days)",
-      "Normal": "Long Rest (8 hours)",
-      "Overnight": "Long Rest (New Day)"
     }
   },
   "NewDay": {
@@ -2559,14 +2565,8 @@
     "LabelShort": "S. Rest",
     "Recovery": "Recovers after Short Rest",
     "Result": {
-      "Full": "{name} takes a short rest spending {dice} Hit Dice to recover {health} Hit Points.",
+      "Full": "{name} takes a short rest spending {dice} to recover {health}.",
       "Short": "{name} takes a short rest."
-    },
-    "Type": {
-      "Epic": "Short Rest (5 minutes)",
-      "Gritty": "Short Rest (8 hours)",
-      "Normal": "Short Rest (1 hour)",
-      "Overnight": "Short Rest (New Day)"
     }
   }
 },
@@ -3340,6 +3340,50 @@
 "DND5E.Unidentified.Notice": "You must identify this item to learn its details.",
 "DND5E.Unidentified.Title": "Unidentified",
 "DND5E.Unidentified.Value": "???",
+
+"DND5E.UNITS": {
+  "TIME": {
+    "Day": {
+      "Label": "Day"
+    },
+    "Hour": {
+      "Label": "Hour"
+    },
+    "Minute": {
+      "Label": "Minute"
+    },
+    "Month": {
+      "Label": "Month"
+    },
+    "Round": {
+      "Label": "Round",
+      "Counted": {
+        "narrow": "{number}r",
+        "one": "{number} round",
+        "other": "{number} rounds"
+      }
+    },
+    "Second": {
+      "Label": "Second"
+    },
+    "Turn": {
+      "Label": "Turn",
+      "Abbreviation": "t",
+      "Counted": {
+        "narrow": "{number}t",
+        "one": "{number} turn",
+        "other": "{number} turns"
+      }
+    },
+    "Week": {
+      "Label": "Week"
+    },
+    "Year": {
+      "Label": "Year"
+    }
+  }
+},
+
 "DND5E.Unknown": "Unknown",
 "DND5E.Unlimited": "Unlimited",
 
