--- a/lang/en.json
+++ b/lang/en.json
@@ -216,6 +216,7 @@
       "one": "Max {points} point per score",
       "other": "Max {points} points per score"
     },
+    "Details": "Improvement Details",
     "Feat": {
       "Hint": "Drop a feat here to choose one instead of an ability score improvement."
     },
