--- a/lang/en.json
+++ b/lang/en.json
@@ -738,6 +738,10 @@
         "label": "Associated Skills or Tools",
         "hint": "Present ability checks using proficiency and bonuses with these skills or tools."
       },
+      "bonus": {
+        "label": "Check Bonus",
+        "hint": "Bonus added to all check rolls made using this activity."
+      },
       "dc": {
         "label": "Difficulty Class",
         "calculation": {
@@ -2610,6 +2614,10 @@
       "ability": {
         "label": "Challenge Abilities",
         "hint": "Abilities that may be rolled to attempt to save."
+      },
+      "bonus": {
+        "label": "Save Bonus",
+        "hint": "Bonus added to all save rolls made using this activity."
       },
       "dc": {
         "label": "Difficulty Class",
